[package]
name = "terny"
version = "0.2.0"
description = "A simple, C-like, ternary operator for cleaner syntax."
authors = ["KaitlynEthylia <kaitlyyn.ethylia@proton.me>"]
edition = "2021"
docs = "https://docs.rs/terny"
repository = "https://github.com/KaitlynEthylia/terny"
license = "Unlicense"

[lib]
proc-macro = true
